feat: strengthen IM delivery reliability and API safeguards
- add typed read protocol and TCP handling
- move offline push state to Redis
- add API rate limiting and idempotency protection
- add Mongo sharding bootstrap script and regression coverage